<resources>
    <string name="app_name">Ae Stores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="become_a_dealer">Become a Dealer</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="call_us_at_91_8553463261_free">Call us at 91-8553463261 (Free)</string>
    <string name="all_products">All Products</string>
    <string name="featured_categories">Featured Categories</string>
    <string name="skin_care_u0026_beauty_care">SKIN CARE U0026 BEAUTY CARE</string>
    <string name="_38_items">38 Items</string>
    <string name="health_care">Health Care</string>
    <string name="hair_care">Hair Care</string>
    <string name="skin_care_beauty">Skin Care and Beauty</string>
    <string name="personal_care">Personal Care</string>
    <string name="trending">Trending</string>
    <string name="new_arrival">New Arrival</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="rs_499">Rs 499</string>
    <string name="ae_naturals_activated_charcoal_soap_100g">AE Naturals Activated Charcoal soap 100g</string>
    <string name="_0_off">0 % off</string>
    <string name="availability">Availability :</string>
    <string name="_50_in_stock">50 in Stock</string>
    <string name="enter_pincode">Enter PINCODE</string>
    <string name="check_pincode">Check Pincode</string>
    <string name="eg_462003">eg : 462003</string>
    <string name="_1">1</string>
    <string name="free_shipping_applies_to_all_orders_above_100">Free Shipping applies to all orders above 100</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_520_gms">520 gms</string>
    <string name="rs_100">Rs. 100</string>
    <string name="price">Price</string>
    <string name="update_cart">Update Cart</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="PRIVACY_POLICY">https://aestores.online/privacy-policy</string>
    <string name="TERMS_AND_CONDITIONS">https://aestores.online/terms-of-service</string>
    <string name="EXCHANGE_POLICY">https://aestores.online/exchange-policy</string>
    <string name="SHIPPING_POLICY">https://aestores.online/shipping-policy</string>
    <string name="ABOUT_US">https://aestores.online/about-us</string>
    <string name="terms_u0026_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="whole_total">Whole TOTAL</string>
    <string name="billing_details">Billing Details</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="postalcode_zip">Postalcode/ZIP*</string>
    <string name="total">TOTAL</string>
    <string name="product">PRODUCT</string>
    <string name="use_bonus_wallet_amount">Use Bonus Wallet Amount</string>
    <string name="use_bonus_wallet">Use Bonus Wallet</string>
    <string name="bonus_cash">Bonus Cash</string>
    <string name="select_payment">Select Payment</string>
    <string name="pay_online">Pay-online</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="enter_bonus_cash_to_be_used">Enter Bonus cash to be used</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="your_order">Your Order</string>
    <string name="cart_total">Cart Total</string>
    <string name="tax_included">Tax (included)</string>
    <string name="shipping">Shipping</string>
    <string name="place_an_order">Place an order</string>
    <string name="dollar">$</string>
    <string name="h_no_street">H.no / Street</string>
    <string name="quantity">Quantity :</string>
    <string name="garanteed_100_organic_from_natural_farms">Garanteed 100 % organic from natural farms</string>
    <string name="_1_day_return_if_you_change_your_mind">1 Day Return if you change your mind.</string>
    <string name="_1_2_images">1/2 Images</string>
    <string name="hi">Hi,</string>
    <string name="we_have_sent_otp_to_entered_number_please_check">We have sent OTP to entered number. Please check</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="signup">Signup</string>
    <string name="help_u0026_info"><![CDATA[Help & Info]]></string>
    <string name="description"><![CDATA[<u>Description</u>.]]></string>
    <string name="reviews">Reviews</string>
    <string name="agree_to_terms_u0026_conditons"><![CDATA[Agree to Terms & Conditons.]]></string>
    <string name="profile_information">Profile Information.</string>
    <string name="address_details">Address Details</string>
    <string name="your_refferal_code">Your refferal code.</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="search_product">Search Product</string>
    <string name="searching_for_results">Searching for Results</string>
    <string name="avg_star_rating_0_ratings">Avg. Star Rating (0 Ratings)</string>
    <string name="_5_stars">5 Stars</string>
    <string name="my_account">My Account</string>
    <string name="my_purchase">My Purchase</string>
    <string name="my_balance">My Balance</string>
    <string name="my_info_u0026_settings"><![CDATA[My Info & Settings]]></string>
    <string name="add_cash">Add Cash</string>
    <string name="referral_code">Referral Code</string>
    <string name="no_file_chosen">No File chosen</string>
    <string name="account_profile">Account Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="personal_details">Personal Details</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen_for_profile_image">No File chosen for profile image</string>
    <string name="hno_street">Hno/ Street</string>
    <string name="postalcode_zip_optional">Postalcode/ ZIP (optional)</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="kyc_details">KYC Details</string>
    <string name="pan_card_number">PAN Card Number</string>
    <string name="pan_card_front">Pan Card Front</string>
    <string name="bank_details">Bank Details</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="my_team">My Team</string>
    <string name="earning_report">Earning Report</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_refferals">My Refferals</string>
    <string name="direct_earnings">Direct Earnings</string>
    <string name="my_offers">My Offers</string>
    <string name="direct_earning">Direct Earning</string>
    <string name="team_earning">Team Earning</string>
    <string name="s_no">S.NO</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="offers_">My Offers</string>
    <string name="sponser_id">Sponser ID</string>
    <string name="team_volume">Team Volume</string>
    <string name="personal_volume">Personal Volume</string>
    <string name="refferal_code">Refferal Code</string>
    <string name="uncompleted_kyc">Uncompleted KYC</string>
    <string name="similar_products">Similar Products :</string>
    <string name="clear_all_items">Clear all items</string>
</resources>