<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/categoryFragment"
        android:enabled="true"
        android:title="@string/category"
        android:icon="@drawable/ic_category"/>
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"/>
    <item
        android:id="@+id/wishListFragment"
        android:enabled="true"
        android:title="@string/wishlist"
        android:icon="@drawable/ic_heart"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/ic_account"/>
</menu>