<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background_green_box"
    android:padding="@dimen/_8sdp"

    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_toStartOf="@id/tvItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/ae_naturals_activated_charcoal_soap_100g"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/mulish_regular"
            android:layout_alignParentTop="true"
            android:lineSpacingExtra="@dimen/_5sdp"

            android:textSize="@dimen/_12sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_centerVertical="true"
            android:text="@string/rs_100"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:gravity="center"

            android:id="@+id/tvItemPrice"
            android:textColor="@color/black"
            android:fontFamily="@font/mulish_bold"
            android:layout_marginEnd="@dimen/_8sdp"

            android:lineSpacingExtra="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_below="@id/tvProductName"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/_12sdp"

            android:text="@string/_520_gms"
            android:layout_marginStart="@dimen/_12sdp"
            android:gravity="center"
            android:id="@+id/tvItemWeight"
            android:textColor="@color/grey_dark"
            android:fontFamily="@font/mulish_regular"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp" />


    </RelativeLayout>



</LinearLayout>