<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.ushatech.aestoreskotlin.presentation.LoginViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_95sdp"
        android:layout_height="@dimen/_95sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/_9sdp"
        android:src="@drawable/ic_app_aestores" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_bold"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="@dimen/_19sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_29sdp"
            android:fontFamily="@font/mulish_regular"
            android:gravity="start"
            android:text="@string/login_to_your_account"

            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/edtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"

            android:hint="@string/mobile_number"


            android:inputType="number"
            android:maxLength="10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/background_green_filled"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_29sdp"
            android:fontFamily="@font/mulish_regular"
            android:gravity="center"
            android:text="OR"

            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/background_green_solid"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@color/black" />
    </LinearLayout>


</RelativeLayout>
</layout>