<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.ushatech.aestoreskotlin.presentation.SignupViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="Sign Up"
            android:textSize="@dimen/_19sdp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:fontFamily="@font/mulish_bold"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:background="@color/green"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:text="Register new Account ! It's Free."
            android:textSize="@dimen/_14sdp"
            android:gravity="start"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_29sdp"

            android:fontFamily="@font/mulish_regular"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_marginTop="@dimen/_30sdp"
            android:hint="Full Name"
            android:id="@+id/edtName"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:inputType="number"
            android:maxLength="10"
            android:layout_marginTop="@dimen/_30sdp"
            android:hint="@string/mobile_number"
            android:id="@+id/edtMobileNumber"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/btnSignup"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:textColor="@color/white"
            android:background="@drawable/background_green_filled"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_29sdp"
            android:fontFamily="@font/mulish_regular"
            android:gravity="center"
            android:text="OR"

            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/background_green_filled"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>




</RelativeLayout>
</layout>